# AutocleanML

./: CHANGELOG.md  LICENSE  README.md  h.ipynb  pyproject.toml
.agent/workflows/: deploy.md
autocleanml/: __init__.py  _cleaner.py  _constants.py  _detector.py  _encoder.py  _evaluator.py  _exceptions.py  _guide.py  _persistence.py  _pipeline.py  _scaler.py  _splitter.py  _text.py  _trainer.py
autocleanml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autocleanml/data/: sample_titanic.csv
mlguide/: _cleaner.py  _comparator.py  _detector.py  _encoder.py  _guide.py  _importance.py  _loader.py  _nlp.py  _pipeline.py  _predictor.py
mlguide.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mlguide/data/: sample_classification.csv  sample_regression.csv
scripts/: generate_sample_data.py
tests/: test_guide.py  test_modules.py  test_pipeline_integration.py  test_text_nlp.py
